gitops/platform-apps/pixelfed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixelfed
  namespace: pixelfed
  labels:
    app.kubernetes.io/name: pixelfed
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pixelfed
  ports:
    - name: http
      port: 80
      targetPort: http
